<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wine"
    tools:context=".ui.HomeActivity">

    <View
        android:id="@+id/view_menu"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/wine" />

    <View
        android:id="@+id/view_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_menu"
        android:background="@color/white" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/view_menu"
        android:layout_alignBottom="@id/view_menu"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/desc_menu_mensagens"
        android:src="@drawable/ic_infinity" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/view_menu"
        android:layout_alignBottom="@id/view_menu"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_favoritos"
        android:src="@drawable/ic_favorite" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/view_menu"
        android:layout_alignBottom="@id/view_menu"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/desc_modo_diurno_noturno"
        android:src="@drawable/ic_lighttype" />

    <TextView
        android:id="@+id/textview_greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_menu"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/msg_apresentacao"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textview_frasemotivacional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/msg_frase_de_apoio" />

    <View
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/textview_frasemotivacional"
        android:background="@color/wine"
        android:layout_width="132dp"
        android:layout_height="4dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/view_body"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/wine"
        android:text="@string/btn_nova_frase" />


</RelativeLayout>