<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wine"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textview_letsGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/msg_letsgo"
        android:textSize="32sp"
        android:theme="@style/Motivation" />

    <EditText
        android:id="@+id/textview_yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:hint="@string/msg_your_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="18dp"
        android:theme="@style/Motivation" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/lightwine"
        android:text="@string/btn_save"
        android:theme="@style/Motivation" />

</RelativeLayout>